Integrated new and create actions for portfolios

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,15 +2,13 @@
 
 <div>
   <ul>
-<% @portfolio_items.each do |portfolio_item| %>
+    <% @portfolio_items.each do |portfolio_item| %>
       <li>
-  <p>
-    <%= portfolio_item.title %>
-    <p><%= portfolio_item.subtitle %></p>
-    <p><%= portfolio_item.body %></p>
-    <%= image_tag portfolio_item.thumb_image %>
-  </p>
+          <p><%= portfolio_item.title %></p>
+        <p><%= portfolio_item.subtitle %></p>
+        <p><%= portfolio_item.body %></p>
+        <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
       </li>
-<% end %>
+    <% end %>
   </ul>
 </div>
