--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,12 @@
 <h1>Portfolio Items</h1>
 
+<%= link_to "Create new Portfolio", new_portfolio_path %>
+
 <div>
   <ul>
     <% @portfolio_items.each do |portfolio_item| %>
       <li>
+        <%= link_to "Edit the Portfolio", edit_portfolio_path(portfolio_item.id) %>
           <p><%= portfolio_item.title %></p>
         <p><%= portfolio_item.subtitle %></p>
         <p><%= portfolio_item.body %></p>
