--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,7 +7,7 @@
     <% @portfolio_items.each do |portfolio_item| %>
       <li>
         <%= link_to "Edit the Portfolio", edit_portfolio_path(portfolio_item.id) %>
-          <p><%= portfolio_item.title %></p>
+        <p><%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
         <p><%= portfolio_item.subtitle %></p>
         <p><%= portfolio_item.body %></p>
         <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
