--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,6 +7,7 @@
     <% @portfolio_items.each do |portfolio_item| %>
       <li>
         <%= link_to "Edit the Portfolio", edit_portfolio_path(portfolio_item.id) %>
+        <%= link_to "Delete the Portfolio", portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
         <p><%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
         <p><%= portfolio_item.subtitle %></p>
         <p><%= portfolio_item.body %></p>
