--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,2 @@
-<h1>Pages#home</h1>
+<h1>Hi, <%= current_user.full_name if current_user %></h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= @skills.inspect %>
-
-<%= @portfolio_items.inspect %>
