--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+
 <h1>Editing Blog</h1>
 
 <%= render 'form', blog: @blog %>
