--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+<%= link_to 'New Blog', new_blog_path %>
+
+<hr/>
+
 <h1>Blogs</h1>
 
 <table>
@@ -26,5 +31,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Blog', new_blog_path %>
