--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,6 @@
+<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+
 <h1>New Blog</h1>
 
 <%= render 'form', blog: @blog %>
 
-<%= link_to 'Back', blogs_path %>
