--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Hi, <%= current_user.full_name if current_user %></h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+
+<%= link_to "Blogs", blogs_path %>
+<%= link_to "Portfolios", portfolios_path %>
