--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+
 <h1>Create a new Portfolio Item</h1>
 
 <%= form_for(@portfolio_item) do |f| %>
