--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: "blog"%>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
