--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
   </head>
 
   <body>
-    <%= render "shared/nav", location: "application" %>
+    <%= render "shared/nav" %>
+
+    <%= login_helper %>
+    <hr />
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
