--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,7 +12,11 @@
   </head>
 
   <body>
-    <%= render "shared/nav", location: "blog"%>
+    <%= render "shared/nav" %>
+
+    <%= login_helper %>
+    <hr />
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
