--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -22,8 +22,7 @@
 
     <%= yield %>
 
-    <% if session[:source] %>
-      <p>Thank you for visiting me from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper %>
+
   </body>
 </html>
