Collection based partials

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -8,15 +8,6 @@
 
 <div>
   <ul>
-    <% @portfolio_items.each do |portfolio_item| %>
-      <li>
-        <%= link_to "Edit the Portfolio", edit_portfolio_path(portfolio_item.id) %>
-        <%= link_to "Delete the Portfolio", portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-        <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></p>
-        <p><%= portfolio_item.subtitle %></p>
-        <p><%= portfolio_item.body %></p>
-        <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-      </li>
-    <% end %>
+    <%= render @portfolio_items %>
   </ul>
 </div>
