--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -2,4 +2,4 @@
 
 <h1>Create a new Portfolio Item</h1>
 
-<%= render 'form', portfolio: @portfolio_item %>
+<%= render 'form', portfolio: @portfolio %>
