--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,15 +4,15 @@
 <div>
   <ul>
       <li>
-        <%= link_to "Edit the Portfolio", edit_portfolio_path(@portfolio_item.id) %>
+        <%= link_to "Edit the Portfolio", edit_portfolio_path(@portfolio.id) %>
 
-        <p><%= @portfolio_item.title %></p>
-        <p><%= @portfolio_item.subtitle %></p>
-        <p><%= @portfolio_item.body %></p>
-        <%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %>
+        <p><%= @portfolio.title %></p>
+        <p><%= @portfolio.subtitle %></p>
+        <p><%= @portfolio.body %></p>
+        <%= image_tag @portfolio.main_image unless @portfolio.main_image.nil? %>
 
         <h2>Technologies Used:</h2>
-        <% @portfolio_item.technologies.each do |tech| %>
+        <% @portfolio.technologies.each do |tech| %>
         <p><%= tech.name %></p>
         <% end %>
       </li>
