--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,11 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to "Back", request.referer.present? ? request.referer : root_path %>
-<%= link_to 'New Blog', new_blog_path %>
-
 
 <h1>Blogs</h1>
-
+<%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %>
 <table>
   <thead>
   <tr>
