--- a/app/views/portfolios/_portfolio.html.erb
+++ b/app/views/portfolios/_portfolio.html.erb
@@ -1,6 +1,6 @@
 <li>
-  <%= link_to "Edit the Portfolio", edit_portfolio_path(portfolio.id) %>
-  <%= link_to "Delete the Portfolio", portfolio_path(portfolio), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to "Edit the Portfolio", edit_portfolio_path(portfolio.id) if logged_in?(:site_admin) %>
+  <%= link_to "Delete the Portfolio", portfolio_path(portfolio), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
   <p><%= link_to portfolio.title, portfolio_show_path(portfolio.id) %></p>
   <p><%= portfolio.subtitle %></p>
   <p><%= portfolio.body %></p>
