--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,7 +4,7 @@
 <div>
   <ul>
       <li>
-        <%= link_to "Edit the Portfolio", edit_portfolio_path(@portfolio.id) %>
+        <%= link_to "Edit the Portfolio", edit_portfolio_path(@portfolio.id) if logged_in?(:site_admin) %>
 
         <p><%= @portfolio.title %></p>
         <p><%= @portfolio.subtitle %></p>
