--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,11 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
-
-<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+<p>
+  I am a self-motivated and ambitious software developer who enjoys connecting the dots: be it ideas from different disciplines, people from different teams, or applications from different industries. I have strong technical skills in web architecture and an academic background in engineering.
+  My passion makes me an astute problem-solver capable of prioritizing and managing complex projects with proficiency.
+</p>
+<p>
+  In my postgraduate studies, I've taken the lead for team projects and trained myself to be a good team leader.
+  In my previous role, I exercised skills in communication and teamwork. As a team player, I feel confident and effective in collaborative work. I enjoy brainstorming to achieve a common goal.
+</p>
+<p>
+  I am open-minded on new developments in my field.
+</p>
