--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,50 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<!--Form with header-->
 
-<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+<form action="" method="post" id="form-contact-me">
+  <div class="card bg-secondary rounded-0">
+    <div class="card-header p-0">
+      <div class="bg-secondary text-white text-center py-2">
+        <h3>Contact Me</h3>
+        <p class="m-0">I will gladly help you</p>
+      </div>
+    </div>
+    <div class="card-body p-3">
 
+      <!--Body-->
+      <div class="form-group">
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+          </div>
+          <input type="text" class="form-control" name="name" placeholder="Please type your name" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+          </div>
+          <input type="email" class="form-control" name="email" placeholder="Please type your email" required>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+          </div>
+          <textarea class="form-control" placeholder="Please type your message" required></textarea>
+        </div>
+      </div>
+
+      <div class="text-center">
+        <button type="submit" value="Submit" form="form-contact-me" class="btn btn-info btn-block rounded-0 py-2">
+          <i class="fa fa-envelope"></i>
+          Submit
+        </button>
+      </div>
+    </div>
+
+  </div>
+</form>
+<!--Form with header-->
