--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,9 @@
 
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Web Application Developer</h1>
+  <p class="lead">I am a self-motivated and ambitious software developer who enjoys connecting the dots: be it ideas from different disciplines, people from different teams, or applications from different industries.</p>
   <p class="lead">
-    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+    <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
 </div>
 
-<div class="mastfoot">
-  <div class="inner">
-    <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  </div>
-</div>
