Small changes on Home and About pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,4 @@
+<h2>About Me</h2>
 <p>
   I am a self-motivated and ambitious software developer who enjoys connecting the dots: be it ideas from different disciplines, people from different teams, or applications from different industries. I have strong technical skills in web architecture and an academic background in engineering.
   My passion makes me an astute problem-solver capable of prioritizing and managing complex projects with proficiency.
