--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,7 @@
-
 <div class="inner cover">
   <h1 class="cover-heading">Web Application Developer</h1>
-  <p class="lead">I am a self-motivated and ambitious software developer who enjoys connecting the dots: be it ideas from different disciplines, people from different teams, or applications from different industries.</p>
+  <p class="lead">An ambitious software developer with good management skills, seeking a challenging position in the IT industry to pursue a highly rewarding career and healthy work environment where I can enhance my skills and knowledge along with organization objectives and growth.</p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
 </div>
-
