Updated Styles and added map for Contact

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,50 +1,51 @@
-<!--Form with header-->
-
-<form action="" method="post" id="form-contact-me">
-  <div class="card bg-secondary rounded-0">
-    <div class="card-header p-0">
-      <div class="bg-secondary text-white text-center py-2">
-        <h3>Contact Me</h3>
-        <p class="m-0">I will gladly help you</p>
-      </div>
-    </div>
-    <div class="card-body p-3">
-
-      <!--Body-->
-      <div class="form-group">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
-          </div>
-          <input type="text" class="form-control" name="name" placeholder="Please type your name" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
-          </div>
-          <input type="email" class="form-control" name="email" placeholder="Please type your email" required>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
-          </div>
-          <textarea class="form-control" placeholder="Please type your message" required></textarea>
-        </div>
-      </div>
-
-      <div class="text-center">
-        <button type="submit" value="Submit" form="form-contact-me" class="btn btn-info btn-block rounded-0 py-2">
-          <i class="fa fa-envelope"></i>
-          Submit
-        </button>
-      </div>
-    </div>
-
+<div class="row">
+  <div class="col-md-6">
+    <iframe width="100%" height="100%"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d80127.55468538459!2d16.92182452450255!3d51.12716471936589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fe9c2d4b58abf%3A0xb70956aec205e0f5!2zV3JvY8WCYXc!5e0!3m2!1str!2spl!4v1612458803387!5m2!1str!2spl" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+    </iframe>
   </div>
-</form>
-<!--Form with header-->
+  <div class="col-md-6">
+    <form action="" method="post" id="form-contact-me">
+      <div class="card bg-secondary rounded-0">
+        <div class="card-header p-0">
+          <div class="bg-secondary text-white text-center py-2">
+            <h3>Contact Me</h3>
+            <p class="m-0">I will gladly help you</p>
+          </div>
+        </div>
+        <div class="card-body p-3">
+          <div class="form-group">
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+              </div>
+              <input type="text" class="form-control" name="name" placeholder="Please type your name" required>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+              </div>
+              <input type="email" class="form-control" name="email" placeholder="Please type your email" required>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+              </div>
+              <textarea class="form-control" placeholder="Please type your message" required></textarea>
+            </div>
+          </div>
+          <div class="text-center">
+            <button type="submit" value="Submit" form="form-contact-me" class="btn btn-info btn-block rounded-0 py-2">
+              <i class="fa fa-envelope"></i>
+              Submit
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
