--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,61 +1,67 @@
-<div class="card bg-secondary">
-  <div class="card-block">
-      <h2 class="text-center">Sign up</h2>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <%= f.label :first_name %><br />
-                    <%= f.text_field :first_name, autocomplete: "first_name", class:"form-control"%>
+<div class="container">
+  <div class="card bg-secondary mx-auto">
+    <div class="card-block">
+      <div class="container">
+        <h2 class="text-center">
+          Sign up!
+        </h2>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <%= f.label :first_name %><br />
+                      <%= f.text_field :first_name, autocomplete: "first_name", class:"form-control"%>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <%= f.label :last_name %><br />
+                      <%= f.text_field :last_name, autocomplete: "last_name", class:"form-control"%>
+                    </div>
                   </div>
                 </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <%= f.label :last_name %><br />
-                    <%= f.text_field :last_name, autocomplete: "last_name", class:"form-control"%>
-                  </div>
+                <div class="form-group">
+                  <%= f.label :nickname %><br />
+                  <%= f.text_field :nickname, autocomplete: "nickname", class:"form-control"%>
+                </div>
+                <div class="form-group">
+                  <%= f.label :email %><br />
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control"%>
                 </div>
               </div>
-              <div class="form-group">
-                <%= f.label :nickname %><br />
-                <%= f.text_field :nickname, autocomplete: "nickname", class:"form-control"%>
-              </div>
-              <div class="form-group">
-                <%= f.label :email %><br />
-                <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control"%>
+            </div>
+            <div class="col-md-6">
+              <div class="container">
+                <div class="field">
+                  <%= f.label :password %>
+                  <% if @minimum_password_length %>
+                    <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, autocomplete: "new-password", class:"form-control"%>
+                </div>
+                <div class="form-group">
+                  <%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control"%>
+                </div>
+                <div class="form-group">
+                  <div class="float-left">
+                    <%= f.submit "Sign up", class: "btn btn-success" %>
+                  </div>
+                  <%- if controller_name != 'sessions' %>
+                    <div class="float-right">
+                      <%= link_to "Already signed up?", new_session_path(resource_name), class: "btn btn-primary" %><br />
+                    </div>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="container">
-              <div class="field">
-                <%= f.label :password %>
-                <% if @minimum_password_length %>
-                  <em>(<%= @minimum_password_length %> characters minimum)</em>
-                <% end %><br />
-                <%= f.password_field :password, autocomplete: "new-password", class:"form-control"%>
-              </div>
-              <div class="form-group">
-                <%= f.label :password_confirmation %><br />
-                <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control"%>
-              </div>
-              <div class="form-group">
-                <div class="float-left">
-                  <%= f.submit "Sign up", class: "btn btn-success" %>
-                </div>
-                <%- if controller_name != 'sessions' %>
-                  <div class="float-right">
-                    <%= link_to "Already signed up?", new_session_path(resource_name), class: "btn btn-primary" %><br />
-                  </div>
-                <% end %>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
