--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "About", about_me_path, class: 'nav-link' %>
       <%= link_to "Contact", contact_path, class: 'nav-link' %>
       <%= link_to "My Portfolios", portfolios_path, class: 'nav-link' %>
-      <%= link_to "My Blogs", blogs_path, class: 'nav-link' %>
+      <%= link_to "My Blogs", blogs_path, class: 'nav-link active' %>
       <%= login_helper 'nav-link' %>
     </nav>
   </div>
