--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,9 +1,15 @@
-<tr>
-  <td><%= blog.title %></td>
-  <td><%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</td>
-  <td><%= blog.body %></td>
-  <td><%= link_to blog.status, toggle_status_blog_path(blog) if logged_in?(:site_admin) %></td>
-  <td><%= link_to 'Show', blog %></td>
-  <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin) %></td>
-  <td><%= link_to 'Destroy', blog , method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></td>
-</tr>
+<div class="blog-post">
+  <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
+  <p class="blog-post-meta"><%= distance_of_time_in_words(blog.created_at, Time.now) %> ago. </p>
+  <% if logged_in?(:site_admin) %>
+    <p class="blog-post-meta">
+      <div class="d-flex">
+        <%= link_to blog.status, toggle_status_blog_path(blog), class: 'btn-sm btn-' + (blog.status == "published" ? "success" : "warning") %>
+        <%= link_to 'Edit', edit_blog_path(blog), class: 'btn-sm btn-secondary ml-2'%>
+        <%= link_to 'Destroy', blog , method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn-sm btn-danger ml-auto'%>
+      </div>
+    </p>
+  <% end %>
+  <p><%= blog.body %></p>
+
+</div>
