--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,8 +17,9 @@
 <!--start of blog header-->
 <div class="blog-header">
   <div class="container">
-    <h1 class="blog-title">The Bootstrap Blog</h1>
-    <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    <h1 class="blog-title">Oray Kurt's Diary</h1>
+    <p class="lead blog-description">You are on my notebook. I'm taking notes here</p>
+    <%= link_to "New Post", new_blog_path, class: "btn-sm btn-primary" if logged_in?(:site_admin) %>
   </div>
 </div>
 <!--end of blog header-->
@@ -33,40 +34,37 @@
     <div class="col-sm-3 offset-sm-1 blog-sidebar">
       <div class="sidebar-module sidebar-module-inset">
         <h4>About</h4>
-        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p><em>An entrepreneur</em>, <em>developer</em>, & <em>unshakable optimist</em> dedicated to helping IT companies to build <em>the skyline of tomorrow</em></p>
       </div>
-      <div class="sidebar-module">
-        <h4>Archives</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">March 2014</a></li>
-          <li><a href="#">February 2014</a></li>
-          <li><a href="#">January 2014</a></li>
-          <li><a href="#">December 2013</a></li>
-          <li><a href="#">November 2013</a></li>
-          <li><a href="#">October 2013</a></li>
-          <li><a href="#">September 2013</a></li>
-          <li><a href="#">August 2013</a></li>
-          <li><a href="#">July 2013</a></li>
-          <li><a href="#">June 2013</a></li>
-          <li><a href="#">May 2013</a></li>
-          <li><a href="#">April 2013</a></li>
-        </ol>
-      </div>
+<!--      <div class="sidebar-module">-->
+<!--        <h4>Archives</h4>-->
+<!--        <ol class="list-unstyled">-->
+<!--          <li><a href="#">March 2014</a></li>-->
+<!--          <li><a href="#">February 2014</a></li>-->
+<!--          <li><a href="#">January 2014</a></li>-->
+<!--          <li><a href="#">December 2013</a></li>-->
+<!--          <li><a href="#">November 2013</a></li>-->
+<!--          <li><a href="#">October 2013</a></li>-->
+<!--          <li><a href="#">September 2013</a></li>-->
+<!--          <li><a href="#">August 2013</a></li>-->
+<!--          <li><a href="#">July 2013</a></li>-->
+<!--          <li><a href="#">June 2013</a></li>-->
+<!--          <li><a href="#">May 2013</a></li>-->
+<!--          <li><a href="#">April 2013</a></li>-->
+<!--        </ol>-->
+<!--      </div>-->
       <div class="sidebar-module">
         <h4>Elsewhere</h4>
         <ol class="list-unstyled">
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Facebook</a></li>
+          <li><a href="https://github.com/oraykt">GitHub</a></li>
+          <li><a href="https://twitter.com/oraykt">Twitter</a></li>
+          <li><a href="https://linkedin.com/in/rootkt">LinkedIn</a></li>
         </ol>
       </div>
     </div><!-- /.blog-sidebar -->
 <!--    end of side-->
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
+    <footer class="blog-footer w-100">
+      <p><%= copyright %></p>
     </footer>
   </div>
 </div>
@@ -74,8 +72,5 @@
 
   <%= source_helper %>
 
-  <div class="container text-center">
-    <%= copyright %>
-  </div>
   </body>
 </html>
