--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,16 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
-
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @blog.body %>
-</p>
-
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
-<%= link_to 'Back', blogs_path %>
+<div class="col-sm-8 blog-main">
+  <h2><%= @blog.title %></h2>
+  <div class="d-flex">
+    <%= link_to @blog.status, toggle_status_blog_path(@blog), class: 'btn-sm btn-' + (@blog.status == "published" ? "success" : "warning") %>
+    <%= link_to 'Edit', edit_blog_path(@blog), class: 'btn-sm btn-secondary ml-2'%>
+  </div>
+  <p>
+    <%= @blog.body %>
+  </p>
+</div>
