--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -24,11 +24,12 @@
   <!--        </ol>-->
   <!--      </div>-->
   <div class="sidebar-module">
-    <h4>Elsewhere</h4>
-    <ol class="list-unstyled">
-      <li><a href="https://github.com/oraykt">GitHub</a></li>
-      <li><a href="https://twitter.com/oraykt">Twitter</a></li>
-      <li><a href="https://linkedin.com/in/rootkt">LinkedIn</a></li>
+    <h4>Social Links</h4>
+    <ol class="list-unstyled social-links">
+      <li><a href="https://github.com/oraykt" target="_blank"><%= fa_icon "github" %></a></li>
+      <li><a href="https://instagram.com/oraykt" target="_blank"><%= fa_icon "instagram" %></a></li>
+      <li><a href="https://facebook.com/oraykurt" target="_blank"><%= fa_icon "facebook" %></a></li>
+      <li><a href="https://linkedin.com/in/rootkt" target="_blank"><%= fa_icon "linkedin" %></a></li>
     </ol>
   </div>
 </div><!-- /.blog-sidebar -->
