--- a/app/views/portfolios/_portfolio.html.erb
+++ b/app/views/portfolios/_portfolio.html.erb
@@ -1,8 +1,6 @@
-<li>
-  <%= link_to "Edit the Portfolio", edit_portfolio_path(portfolio.id) if logged_in?(:site_admin) %>
-  <%= link_to "Delete the Portfolio", portfolio_path(portfolio), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
-  <p><%= link_to portfolio.title, portfolio_show_path(portfolio.id) %></p>
-  <p><%= portfolio.subtitle %></p>
-  <p><%= portfolio.body %></p>
-  <%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil? %>
-</li>
+  <div class="card">
+    <img src="<%= portfolio.thumb_image %>" alt="Card image cap">
+    <p class="card-text">
+      <%= portfolio.title %>
+    </p>
+  </div>
