--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-8 col-md-7 py-4">
-        <h4 class="text-white">About</h4>
-        <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+        <h4><%= link_to "About Me", about_me_path, class: "text-white" %></h4>
+        <p class="text-muted">An ambitious software developer with good management skills, seeking a challenging position in the IT industry to pursue a highly rewarding career and healthy work environment where I can enhance my skills and knowledge along with organization objectives and growth.</p>
       </div>
       <div class="col-sm-4 offset-md-1 py-4">
-        <h4 class="text-white">Contact</h4>
+        <h4><%= link_to "Contact Me", contact_path, class: "text-white" %></h4>
         <ul class="list-unstyled">
           <li><a href="#" class="text-white">Follow on Twitter</a></li>
           <li><a href="#" class="text-white">Like on Facebook</a></li>
@@ -19,7 +19,7 @@
 
 <div class="navbar navbar-dark bg-dark shadow-sm">
   <div class="container d-flex justify-content-between">
-    <a href="#" class="navbar-brand">Album</a>
+    <a href="#" class="navbar-brand">Oray Kurt</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
