Portfolio Nav modified

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -10,7 +10,7 @@
         <div class="card-header p-0">
           <div class="bg-secondary text-white text-center py-2">
             <h3>Contact Me</h3>
-            <p class="m-0">I will gladly help you</p>
+            <p class="m-0">I love to talk with you about our unique</p>
           </div>
         </div>
         <div class="card-body p-3">
