--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -1,10 +1,9 @@
 <section class="jumbotron text-center">
   <div class="container">
-    <h1 class="jumbotron-heading">Album example</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <h1 class="jumbotron-heading">My Portfolios</h1>
+    <p class="lead text-muted">Hello, I am Web Application Developer from Wroclaw, Poland. I have developed myself with the best practices in web application building. This website is built with RubyonRails. I am also good at Javascript Frameworks and Libraries. I love to talk with you about our unique.</p>
     <p>
-      <a href="#" class="btn btn-primary">Main call to action</a>
-      <a href="#" class="btn btn-secondary">Secondary action</a>
+      <%= link_to "Contact Me", contact_path, class: 'btn btn-primary' %>
     </p>
   </div>
 </section>
