--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -6,11 +6,12 @@
         <p class="text-muted">An ambitious software developer with good management skills, seeking a challenging position in the IT industry to pursue a highly rewarding career and healthy work environment where I can enhance my skills and knowledge along with organization objectives and growth.</p>
       </div>
       <div class="col-sm-4 offset-md-1 py-4">
-        <h4><%= link_to "Contact Me", contact_path, class: "text-white" %></h4>
+        <h4><%= link_to "My Blogs", blogs_path, class: "text-white" %></h4>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white">Follow on Twitter</a></li>
-          <li><a href="#" class="text-white">Like on Facebook</a></li>
-          <li><a href="#" class="text-white">Email me</a></li>
+          <li><a href="https://linkedin.com/in/rootkt" target="_blank" class="text-white">Get in touch <span class="social-link"><%= fa_icon "linkedin" %></span></a></li>
+          <li><a href="https://github.com/oraykt" target="_blank" class="text-white">Take a look at <span class="social-link"><%= fa_icon "github"%></span></a></li>
+          <li><a href="https://instagram.com/oraykt" target="_blank" class="text-white">Follow me on <span class="social-link"><%= fa_icon "instagram" %></span></a></li>
+          <li><a href="https://facebook.com/oraykurt" target="_blank" class="text-white">We are friend on <span class="social-link"><%= fa_icon "facebook" %></span></a></li>
         </ul>
       </div>
     </div>
@@ -19,7 +20,7 @@
 
 <div class="navbar navbar-dark bg-dark shadow-sm">
   <div class="container d-flex justify-content-between">
-    <a href="#" class="navbar-brand">Oray Kurt</a>
+    <%= link_to "Oray Kurt", root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
