--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -8,12 +8,10 @@
       <div class="col-sm-4 offset-md-1 py-4">
         <h4 class="text-white">Explore</h4>
         <ul class="list-unstyled">
-          <li><%= link_to "Home", root_path, class: 'text-white' %></li>
-          <li><%= link_to "About", about_me_path, class: 'text-white' %></li>
-          <li><%= link_to "Contact", contact_path, class: 'text-white' %></li>
-          <li><%= link_to "My Portfolios", portfolios_path, class: 'text-white' %></li>
-          <li><%= link_to "My Blogs", blogs_path, class: 'text-white active' %></li>
-          <li><%= login_helper 'text-white mr-2' %></li>
+          <%= nav_helper 'li', 'text-white' %>
+          <li>
+            <%= login_helper 'text-white mr-2' %>
+          </li>
         </ul>
       </div>
     </div>
