Added social links into Contact Page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -49,3 +49,9 @@
     </form>
   </div>
 </div>
+<div class="d-flex justify-content-center mt-5 social-links">
+  <a href="https://github.com/oraykt" target="_blank" ><%= fa_icon "github" %></a>
+  <a href="https://instagram.com/oraykt" target="_blank" ><%= fa_icon "instagram" %></a>
+  <a href="https://facebook.com/oraykurt" target="_blank" ><%= fa_icon "facebook" %></a>
+  <a href="https://linkedin.com/in/rootkt" target="_blank" ><%= fa_icon "linkedin" %></a>
+</div>
