Integrated video background along with styles

--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,6 +1,8 @@
 <div class="masthead clearfix">
   <div class="inner">
-    <h3 class="masthead-brand"><%= link_to "Oray Kurt", root_path, class: "text-decoration-none" %></h3>
+    <h3 class="masthead-brand">
+      <%= link_to "Oray Kurt", root_path, class: "text-decoration-none" %>
+    </h3>
     <nav class="nav nav-masthead app-nav">
       <%= nav_helper 'span', 'nav-link mr-2' %>
       <%= login_helper "nav-link" %>
