--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,6 +188,17 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('rubywallpaper.jpg') no-repeat;
+  background: image-url('background_video.jpg') no-repeat;
   background-size: cover;
+}
+
+#fullscreen-bg::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  content: '';
+  /* Any overlay color that you want, here I use black with 25% opacity */
+  background-color: rgba(0,0,0,0.25);
 }
