--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,15 @@
       <div class="site-wrapper-inner">
         <div class="cover-container">
 
-          <div id="background"></div>
-
+<!--          <div id="background"></div>-->
+          <%= video_tag(
+                'background_video.mp4',
+                id: 'background',
+                autoplay: true,
+                loop: true,
+                muted: true,
+                poster: 'background_video.jpg',
+              ) %>
           <%= render "shared/application_nav" %>
 
           <%= yield %>
