--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container pt-2">
   <div class="row">
     <div class="col-md-7">
-      <%= image_tag @portfolio.main_image %>
+      <%= image_tag @portfolio.main_image.to_s, width: "100%" %>
     </div>
     <div class="col-md-5">
       <h2><%= @portfolio.title %></h2>
