--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
   </head>
 
   <body>
+    <%= render 'shared/alerts' %>
+
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
