--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <%= render 'shared/alerts' %>
     <%= render 'shared/portfolio_nav' %>
     <%= render 'shared/portfolio_masthead'%>
 
