--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <%= render 'shared/alerts' %>
+    <%= alerts %>
     <%= render "shared/blog_nav" %>
     <%= render 'shared/blog_masthead' %>
     <div class="container">
