Build a twitter parser with Regexpression for true links

--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -6,7 +6,7 @@
       <div class="col-md-6">
         <div class="tweets">
           <div class="card bg-secondary">
-            <%= tweet %>
+            <%= twitter_link_parser tweet %>
           </div>
         </div>
       </div>
