--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @comment, html: { id: "new_comment" }, url: '#' do |f| %>
   <div class="form-group">
-    <%= f.label :content %>
+    <%= f.label :content, "Make a comment" %>
     <%= f.text_area :content, class: 'form-control' %>
   </div>
   <%= f.submit 'Post Comment', class: 'btn btn-primary' %>
