--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -25,6 +25,13 @@
   </div>
 
   <div class="form-group">
+    <%= f.radio_button :status, 'draft' %>
+    <%= f.label :status, 'Draft' %>
+    <%= f.radio_button :status, 'published' %>
+    <%= f.label :status, 'Published' %>
+  </div>
+
+  <div class="form-group">
     <%= f.text_area :body, class: 'form-control', rows:"10", placeholder: "Content" %>
   </div>
 
