A little bit styled

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,7 +17,7 @@
           :id,
           :title,
           {
-            selected: blog.topic.id,
+            # selected: blog.topic.id,
             include_blank: true
           },
           class: 'form-control'
