--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-8 blog-main">
-  <h2>Topic: <strong><%= @topic.title %></strong></h2>
+  <h2 class="text-center"><%= @topic.title %></h2>
   <hr>
 
   <div class="d-flex justify-content-center">
