--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,13 +1,7 @@
 <div class="card mt-3">
   <div class="card-header text-center">
     <h4><%= link_to "#{blog.title}", blog_path(blog) %></h4>
-    <% if logged_in?(:site_admin) %>
-      <div class="d-flex">
-        <%= link_to blog.status, toggle_status_blog_path(blog), class: 'btn-sm btn-' + (blog.status == "published" ? "success" : "warning") %>
-        <%= link_to fa_icon('pencil-square-o'), edit_blog_path(blog), class: 'btn-sm btn-secondary ml-auto'%>
-        <%= link_to fa_icon('trash'), blog , method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn-sm btn-danger ml-2'%>
-      </div>
-    <% end %>
+    <%= render partial: 'blogs/admin_actions', locals: { blog: blog}%>
   </div>
   <div class="blog-post-meta mt-1 ml-1">
     <label class="text-info"><%= link_to blog.topic.title, topic_path(blog.topic) %> </label> ||
