Blogs nav partial disabled for temporarily

--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,4 +1,4 @@
-<div class="blog-header">
+<div class="blog-header mt-5">
   <div class="container">
     <h1 class="blog-title">Oray Kurt's Diary</h1>
     <p class="lead blog-description">You are on my notebook. I'm taking notes here</p>
