--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,7 +17,7 @@
 
   <body>
     <%= alerts %>
-    <%= render "shared/blog_nav" %>
+    <%= render "shared/portfolio_nav" %>
     <%= render 'shared/blog_masthead' %>
     <div class="container">
       <div class="row">
