--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,4 +1,5 @@
 <div class="inner cover">
+  <em>-This page will be refactored-</em>
   <h1 class="cover-heading">Coding News</h1>
   <div class="row">
     <% @tweets.each do |tweet| %>
