--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -1,6 +1,6 @@
 <section class="jumbotron text-center">
   <div class="container">
-    <h1 class="jumbotron-heading">My Portfolios</h1>
+    <h1 class="jumbotron-heading">My Portfolio</h1>
     <p class="lead text-muted">Hello, I am Web Application Developer from Wroclaw, Poland. I have developed myself with the best practices in web application building. This website is built with RubyonRails. I am also good at Javascript Frameworks and Libraries. I love to talk with you about our unique.</p>
     <p>
       <%= link_to "Contact Me", contact_path, class: 'btn btn-primary' %>
